# SudoCUDA

./: .gitignore  CMakeLists.txt  README.md  array.cuh  kernel.cu
